--- a/src/index.html
+++ b/src/index.html
@@ -8,16 +8,14 @@
     <title>AR Frontend-Developer</title>
     <link href="./styles/styles.css" rel="stylesheet" />
     <style>
-      .bg_image {
-        background: url(./img/bg-image.JPG);
-      }
+
       .heading{
         font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
       }
     </style >
   </head>
   <body ">
-<div class="bg_image  bg-fixed xl:bg-top bg-no-repeat bg-cover bg-center">
+<div class="bg-[url(./img/bg-image.JPG)]  bg-fixed xl:bg-top bg-no-repeat bg-cover bg-center">
     <!-- Header -->
     <header id="header" class="  h-20 w-full fixed top-0 ">
       <nav class="flex items-center h-full md:justify-evenly justify-around">
@@ -67,40 +65,6 @@
             </div>
           </div>
         </div>
-        <!-- Notification-menu -->
-        <div class="flex items-center justify-center h-screen ">
-          <div class="relative inline-block">
-              <!-- Dropdown toggle button -->
-              <button onclick="open_menu()" id="menu-button" class="relative z-10 block p-2 text-gray-700 bg-white border border-transparent rounded-md dark:text-white   focus:ring-green-500 dark:focus:ring-green-500  bg-gray-800  ">
-              <svg class="w-5 h-5 text-gray-800 dark:text-white focus:animate-ping" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M12 22C10.8954 22 10 21.1046 10 20H14C14 21.1046 13.1046 22 12 22ZM20 19H4V17L6 16V10.5C6 7.038 7.421 4.793 10 4.18V2H13C12.3479 2.86394 11.9967 3.91762 12 5C12 5.25138 12.0187 5.50241 12.056 5.751H12C10.7799 5.67197 9.60301 6.21765 8.875 7.2C8.25255 8.18456 7.94714 9.33638 8 10.5V17H16V10.5C16 10.289 15.993 10.086 15.979 9.9C16.6405 10.0366 17.3226 10.039 17.985 9.907C17.996 10.118 18 10.319 18 10.507V16L20 17V19ZM17 8C16.3958 8.00073 15.8055 7.81839 15.307 7.477C14.1288 6.67158 13.6811 5.14761 14.2365 3.8329C14.7919 2.5182 16.1966 1.77678 17.5954 2.06004C18.9942 2.34329 19.9998 3.5728 20 5C20 6.65685 18.6569 8 17 8Z" fill="#21C55E"></path>
-              </svg>
-              </button>
-        
-              <!-- Dropdown menu -->
-              <div id="notify-menu" class="absolute right-0 z-20 mt-2 overflow-hidden bg-white rounded-md shadow-lg w-80 ">
-              <div class="py-2">
-                  <a href="#" class="flex hover:bg-gray-100   items-center px-4 py-3 -mx-2 transition-colors duration-200 transform border-b border-gray-100 bg-white ">
-                  <img class="flex-shrink-0 object-cover w-8 h-8 mx-1 rounded-full" src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=334&q=80" alt="avatar" />
-                  <p class="mx-2 text-sm "><span class="font-bold" href="#">Sara Salah</span> replied on the <span class="font-bold text-blue-500" href="#">Upload Image</span> artical . 2m</p>
-                  </a>
-                  <a href="#" class="flex items-center px-4 py-3 -mx-2 transition-colors duration-200 transform border-b border-gray-100 hover:bg-gray-100 ">
-                  <img class="flex-shrink-0 object-cover w-8 h-8 mx-1 rounded-full" src="https://images.unsplash.com/photo-1531427186611-ecfd6d936c79?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" alt="avatar" />
-                  <p class="mx-2 text-sm text-black"><span class="font-bold" href="#">Slick Net</span> start following you . 45m</p>
-                  </a>
-                  <a href="#" class="flex items-center px-4 py-3 -mx-2 transition-colors duration-200 transform border-b border-gray-100 hover:bg-gray-100  ">
-                  <img class="flex-shrink-0 object-cover w-8 h-8 mx-1 rounded-full" src="https://images.unsplash.com/photo-1450297350677-623de575f31c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=334&q=80" alt="avatar" />
-                  <p class="mx-2 text-sm text-black"><span class="font-bold" href="#">Jane Doe</span> Like Your reply on <span class="font-bold text-blue-500" href="#">Test with TDD</span> artical . 1h</p>
-                  </a>
-                  <a href="#" class="flex items-center hover:bg-gray-50  px-4 py-3 -mx-2 transition-colors duration-200 transform hover:bg-gray-100 ">
-                  <img class="flex-shrink-0 object-cover w-8 h-8 mx-1 rounded-full" src="https://images.unsplash.com/photo-1580489944761-15a19d654956?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=398&q=80" alt="avatar" />
-                  <p class="mx-2 text-sm text-black"><span class="font-bold" href="#">Abigail Bennett</span> start following you . 3h</p>
-                  </a>
-              </div>
-              <a href="#" class="block py-2  text-center text-white bg-green-500  hover:underline">See all notifications</a>
-              </div>
-          </div>
-        </div>
         </div>
       </nav>
     </header>
@@ -118,10 +82,6 @@
             I'm a <span class="text-red-500 selection:text-red-500">AR</span> Frontend Developer
           </h1>
           <div class="flex flex-col items-center">
-
-
-          
-
 </div>
         </div>
       </div>
