--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     </style >
   </head>
   <body ">
-<div class="bg-[url(./src/img/bg-image.JPG)]  bg-fixed xl:bg-top bg-no-repeat bg-cover bg-center">
+<div class="bg-[url(./img/bg-image.JPG)]  bg-fixed xl:bg-top bg-no-repeat bg-cover bg-center">
     <!-- Header -->
     <header id="header" class="  h-20 w-full fixed top-0 ">
       <nav class="flex items-center h-full md:justify-evenly justify-around">
@@ -98,7 +98,7 @@
         <h2 class="mt-5 text-xl font-[300]">INFORMATION ABOUT ME</h2>
         <h1 class="text-2xl border-l-8 pl-2 border-green-400 w-max duration-500 mt-2">I'm Abdul-Rehman</h1>
         <div class="flex lg:flex-nowrap flex-wrap  items-center justify-around mt-5">
-          <img src="src/img/about.jpg" class="" width="300px" alt="">
+          <img src="./img/about.jpg" class="" width="300px" alt="">
           <div class="">
             <ul class="mt-5 ">
               <li class="font-[300] text-lg "><span class=" font-[400] text-xl">Birthday:</span> 13,July,2004</li>
